--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "publish": "npm publish",
     "login": "npm login",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "eslintConfig": {
     "extends": [
@@ -76,6 +77,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.17.1",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.2.7",
     "webpack": "^5.76.0"
